integration of tiled aligner into qsv - pass 1